src/screens/Home/Home.scss
@import './../../assets/css/base.scss';

.home-wrapper {
  position: relative;
  width: 100%;
  height: 100%;
  background: url('http://unsplash.it/1200x800') center center no-repeat;
  background-size: cover;

  .map-container {
    position: absolute;
    top: 80px;
    left: 2000px;
    right: 0;
    bottom: 0;
    opacity: 0;
    transition: all 0.3s ease-in;

    &.show {
      left: 0;
      opacity: 1;
    }

    @media screen and (max-width: $breakpoint-tablet) {
      top: 140px;
    }
    @media screen and (max-width: $breakpoint-mobile) {
      top: 200px;
    }
  }

  .form-container {
    height: 80px;
    padding: 0 20px;
    background: $secondary-color;
    display: flex;
    align-items: center;
    justify-content: center;
    @media screen and (min-width: $breakpoint-mobile) and (max-width: $breakpoint-tablet) {
      height: 140px;
    }
    @media screen and (max-width: $breakpoint-mobile) {
      height: 200px;
    }
  }

  .address-container {
    position: absolute;
    bottom: 10px;
    top: 100px;
    width: 70%;
    left: 50%;
    transform: translateX(-50%);
    padding-right: 17px;
    overflow: hidden;
    overflow-y: scroll;

    &::-webkit-scrollbar {
      width: 12px;
    }

    &::-webkit-scrollbar-track {
      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
      border-radius: 10px;
    }

    &::-webkit-scrollbar-thumb {
      border-radius: 10px;
      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
    }

    @media screen and (max-width: $breakpoint-tablet) {
      top: 160px;
      width: 80%;
    }

    @media screen and (max-width: $breakpoint-mobile) {
      top: 220px;
      width: 90%;
    }
  }

  .download-btn {
    position: fixed;
    bottom: 20px;
    left: 20px;
  }
}

